crates/derive/tests/ui/missing_grammar_attr.rs
use nanachi_derive::Parser;

#[derive(Parser)]
struct MissingGrammarAttr;

fn main() {}
